# gemini-interactions-doctor

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evaluation.md  failure_modes.md  spec.md  suite.md
examples/adversarial/evidence-object-pass/: README.md  app.py
examples/adversarial/near-miss-structured-messages/: AGENTS.md  README.md  app.py
examples/adversarial/obvious-bad/: README.md  app.py
examples/adversarial/read-only-tool/: README.md  app.py
examples/adversarial/risky-prose-approval/: README.md  app.py
examples/adversarial/simple-one-shot-pass/: README.md  app.py
examples/adversarial/structured-safe-pattern/: AGENTS.md  README.md  app.py
examples/fragile-gemini-app/: README.md  app.py
examples/upgraded-gemini-app/: AGENTS.md  README.md  app.py
patches/fragile/: AGENTS.md  MIGRATION_PLAN.md
patches/fragile-gemini-app/: .env.example  README.patch-notes.md
patches/sample/: README.md
reports/: fragile-plan.md  fragile.html  fragile.md  sample-readiness.html  sample-readiness.md  upgraded.html  upgraded.md
schemas/: finding.schema.json  interaction_event.schema.json  report.schema.json  trace.schema.json
src/gdoctor/: __init__.py  cli.py  doctor.py  models.py  patches.py  reports.py  rules.py  scanner.py
tests/: conftest.py  test_adversarial_fixtures.py  test_cli.py  test_examples.py  test_golden_reports.py  test_reports_and_patches.py  test_robustness.py  test_rules.py
tests/golden/: fragile-normalized.json  simple-one-shot-normalized.json  upgraded-normalized.json
(+15 files in other folders)
