[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-interactions-doctor"
version = "0.1.0"
description = "A local readiness checker for Gemini apps moving toward stateful, tool-using workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Raj Kashikar" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2",
  "jinja2>=3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
gdoctor = "gdoctor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
